# tg_bot_first_project

./: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
data/: personality.py  quiz_topics.py
handlers/: __init__.py  basic.py  chatgpt_interface.py  personality_chat.py  quiz.py  random_fact.py  recommendations_interface.py
services/: open_ai.py
